instance1/temp-retrieve/objects/Commission_Summary__c/Commission_Summary__c.object-meta.xml
<CustomObject>
    <description>Commission Period is the reporting record that will be used to store the commission that will be payable to the employee.</description>
    <label>Commission Period</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Commission Period</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>