instance1/temp-retrieve/objects/Commission_Summary__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>IF( ISBLANK(Approved_On_DateTime__c),FALSE,TRUE)</formula>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>