instance1/temp-retrieve/objects/Commission_Summary__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who approved the Commission record.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>