instance1/temp-retrieve/objects/Commission_Summary__c/fields/Number_of_Approved_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approved_Commissions__c</fullName>
    <label># of Approved Commissions</label>
    <summaryFilterItems>
        <field>Commission__c.Status__c</field>
        <operation>equals</operation>
        <value>Commission Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Commission__c.Commission_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>