instance1/temp-retrieve/objects/Commission_Summary__c/fields/Refunded_Sales_Total__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Sales_Total__c</fullName>
    <description>A calculated field that will show the total sales value made by the employee based on the SUM of Tiered Rate Sales Total and Flat Rate Sales Value on the related Commission Records and type is Chargeback. This field will be calculated via APEX Rollup.</description>
    <label>Refunded Sales Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>