instance1/temp-retrieve/objects/Commission_Summary__c/fields/Tiered_Commission_Rule__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Commission_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current tiered commission rule this Commission Summary is assigned. This is dynamically changed based on the Total Sale Value amount.</description>
    <label>Tiered Commission Rule</label>
    <referenceTo>Commission_Rule__c</referenceTo>
    <relationshipName>Commission_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>