instance1/temp-retrieve/objects/Commission_Summary__c/fields/Tiered_Commissionable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Commissionable_Amount__c</fullName>
    <formula>IF( Tiered_Sales_Total_Final__c &gt; $Setup.AutomationControlSettings__c.Commissions_Threshold_Amount__c,
Tiered_Sales_Total_Final__c - $Setup.AutomationControlSettings__c.Commissions_Threshold_Amount__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Tiered Sales Total Final minus the Commission Threshold Amount value.</inlineHelpText>
    <label>Tiered Commissionable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>