instance1/temp-retrieve/objects/Commission_Summary__c/fields/Tiered_Refunded_Sales_Total__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Refunded_Sales_Total__c</fullName>
    <description>A calculated field that will show the total sales value made by the employee based on the SUM of Tier Rate Sales Value on the related Commission Records and type is Refund. This field will be calculated via Master Detail Rollups.</description>
    <label>Tiered Refunded Sales Total</label>
    <summarizedField>Commission__c.Tiered_Rate_Sales_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Commission__c.Type__c</field>
        <operation>equals</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryForeignKey>Commission__c.Commission_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>