instance1/temp-retrieve/objects/Commission_Summary__c/fields/Tiered_Sales_Total_Final__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Sales_Total_Final__c</fullName>
    <description>This field is a calculated field that will be the final sales value that is used to calculate the commission based on for Tiered</description>
    <inlineHelpText>This is the total sales value with refunds and chargebacks included in the value</inlineHelpText>
    <label>Tiered Sales Total (Final)</label>
    <summarizedField>Commission__c.Tiered_Rate_Sales_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Commission__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Commission Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Commission__c.Commission_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>