instance1/temp-retrieve/objects/Commission_Summary__c/fields/Total_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Value__c</fullName>
    <formula>Total_Flat_Rate_Commission_Value__c + Total_Tiered_Commission_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>