instance1/temp-retrieve/objects/Commission_Summary__c/fields/Total_Flat_Rate_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Flat_Rate_Commission_Value__c</fullName>
    <formula>IF(
				Flat_Sales_Total_Final__c = 0, 0,
				(Flat_Sales_Total_Final__c)*  Flat_Commission_Rule__r.Commission_Percent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Flat Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>