instance1/temp-retrieve/objects/Commission_Summary__c/fields/Total_Tiered_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Tiered_Commission_Value__c</fullName>
    <formula>IF(
				Tiered_Sales_Total_Final__c = 0, 0,
				(Tiered_Sales_Total_Final__c - $Setup.AutomationControlSettings__c.Commissions_Threshold_Amount__c ) * Tiered_Commission_Rule__r.Commission_Percent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tiered Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>