instance1/temp-retrieve/objects/Commission_Summary__c/validationRules/Commission_Summary_Approved_By_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Summary_Approved_By_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &apos;Commission Approved&apos;),
ISBLANK( Approved_By__c )
)</errorConditionFormula>
    <errorDisplayField>Approved_By__c</errorDisplayField>
    <errorMessage>Paid By must be filled in when status is approved</errorMessage>
</ValidationRule>