instance1/temp-retrieve/objects/Commission_Summary__c/validationRules/Commission_Summary_Approved_On_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Summary_Approved_On_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &apos;Commission Approved&apos;),
ISBLANK( Approved_On_DateTime__c  )
)</errorConditionFormula>
    <errorDisplayField>Approved_On_DateTime__c</errorDisplayField>
    <errorMessage>Paid On must be filled in when status is approved</errorMessage>
</ValidationRule>