instance1/temp-retrieve/objects/Commission_Summary__c/validationRules/Commission_Summary_Rejected_On_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Summary_Rejected_On_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &apos;Commission Rejected&apos;),
ISBLANK( Rejected_On_DateTime__c  )
)</errorConditionFormula>
    <errorDisplayField>Rejected_On_DateTime__c</errorDisplayField>
    <errorMessage>Rejected On must be filled in when status is rejected</errorMessage>
</ValidationRule>