instance1/temp-retrieve/objects/Commission_Summary__c/validationRules/Commission_Summary_Status_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Summary_Status_Rejected</fullName>
    <active>true</active>
    <description>Only the Finance Team and System Administrators should be able to update the commission summary status to Rejected
This will need to allow users to create commission summary with the status of Approved but shouldn’t allow users to change the status to Re</description>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(Status__c,&apos;Commission Rejected&apos;),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;New_Finance&apos;,
$UserRole.Name &lt;&gt; &apos;CFO&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot update the commission summary status to rejected</errorMessage>
</ValidationRule>