instance1/temp-retrieve/objects/Commission_Summary__c/listViews/All_Commission_Summaries.listView-meta.xml
<ListView>
    <fullName>All_Commission_Summaries</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Flat_Commission_Rule__c</columns>
    <columns>Tiered_Commission_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commission Periods</label>
</ListView>